# cookiecutter-python-package

./: README.md  cookiecutter.json  setup.py
{{ cookiecutter.project_slug }}/: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  requirements-dev.in  requirements-dev.txt  requirements-lint.txt  requirements.txt  setup.cfg  setup.py  tox.ini
{{ cookiecutter.project_slug }}/requirements/: ci.in  ci.txt  dev.in  dev.txt
{{ cookiecutter.project_slug }}/tests/: test_{{cookiecutter.project_slug}}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  cli.py
