[metadata]
name = {{ cookiecutter.project_slug }}

author = {{ cookiecutter.full_name.replace("\"", "\\\"") }}
author_email = {{ cookiecutter.email }}
maintainer = {{ cookiecutter.full_name.replace("\"", "\\\"") }}
maintainer_email = {{ cookiecutter.email }}

# keep in sync with {{ cookiecutter.project_slug }}/__init__.py
version = 0.1.0

description = {{ cookiecutter.project_short_description.replace("\'", "\\\'") }}
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utility,

platforms = Linux

url =
download_url =

license = {{ cookiecutter.open_source_license }}

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.7

[options.entry_points]
console_scripts =
    {{ cookiecutter.project_slug }} = {{ cookiecutter.project_slug }}.cli:entry_point

[tool:pytest]
addopts = --doctest-modules --mccabe --cov=./{{ cookiecutter.project_slug }} --cov-report html:tests/reports/coverage-html --cov-report term-missing --ignore=docs/ --durations=3 --timeout=30
doctest_encoding = utf-8
mccabe-complexity=10

[pydocstyle]
match_dir = {{ cookiecutter.project_slug }}
ignore = D104, D105, D107, D301, D413, D203, D212, D100

[flake8]
max_line_length = 88
exclude = tests/*,.tox/*,.nox/*,docs/*
ignore = H301,H306,H404,H405,W503,D105,D413,D103,D107,E252,N803,E203,C416,A001,A003,P102

[isort]
import_heading_stdlib=Core Library modules
import_heading_thirdparty=Third party modules
import_heading_firstparty=First party modules
import_heading_localfolder=Local modules
include_trailing_comma=True
indent='    '
known_third_party = click,pytest,setuptools
length_sort=0
line_length=80
multi_line_output=3

[mypy]
ignore_missing_imports=true
check_untyped_defs=true
disallow_untyped_defs=false
warn_unused_ignores=true
strict_optional=true
python_version=3.8
warn_redundant_casts=true
warn_unused_configs=true
disallow_untyped_calls=false
disallow_incomplete_defs=true
follow_imports=skip
html_report=mypy-report
mypy_path=typeshed/pyi:typeshed/imports
